--- a/style/style.css
+++ b/style/style.css
@@ -2,31 +2,133 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Dosis', sans-serif;
+}
+
+:root {
+    --action-color: #53239C;
+    --primary-color: #1E1E1E;
+    --secondary-color: #FFFFFF;
+}
+
+i {
+    cursor: pointer;
 }
 
 .main-container {
     display: grid;
     grid-template: repeat(5, 1fr) / repeat(5, 1fr);
+    gap: 20px;
     height: 100vh;
+    background-color: #F0F0F0;
+    padding: 20px;
 }
 
 header {
     grid-row: 1 / 6;
 }
 
+nav {
+    height: 100%;
+    background-color: var(--action-color);
+    border-radius: 10px;
+}
+
+ul {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+li {
+    list-style: none;
+    color: var(--secondary-color);
+    margin-bottom: 50px;
+    font-size: 18px;
+    font-weight: 500;
+}
+
+li:hover {
+    font-weight: 700;
+    cursor: pointer;
+}
+
+.logo {
+    font-size: 28px;
+}
+
 .option-search {
     grid-column: 2 / 6;
     width: 100%;
+    padding: 20px 40px;
+    background-color: var(--secondary-color);
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+label {
+    margin-right: 20px;
+    font-size: 18px;
+    color: var(--primary-color);
+}
+
+input {
+    font-size: 18px;
+    width: 300px;
+    border-radius: 10px;
+    padding: 0.2rem;
+    outline: none;
+    padding-left: 10px;
+    border: 2px solid #A7A7A7;
 }
 
 .search-row {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 20px;
 }
 
 .search-right {
     display: flex;
     justify-content: space-around;
+    align-items: center;
+}
+
+.search-right .fa-solid,h3 {
+    font-size: 18px;
+    color: var(--primary-color);
+}
+
+.search-right .fa-solid {
+    margin-right: 20px;
+}
+
+.btn-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+button {
+    margin-right: 20px;
+    padding: 0.4rem;
+    width: 150px;
+    background-color: var(--action-color);
+    border-radius: 30px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    color: var(--secondary-color);
+    font-weight: 500;
+    font-size: 18px;
+}
+
+button:last-of-type {
+    margin-right: 0;
 }
 
 .content {
