--- a/style/style.css
+++ b/style/style.css
@@ -46,7 +46,7 @@ li {
     list-style: none;
     color: var(--secondary-color);
     margin-bottom: 50px;
-    font-size: 18px;
+    font-size: 1.2rem;
     font-weight: 500;
 }
 
@@ -56,7 +56,7 @@ li:hover {
 }
 
 .logo {
-    font-size: 28px;
+    font-size: 1.8rem;
 }
 
 .option-search {
@@ -72,12 +72,12 @@ li:hover {
 
 label {
     margin-right: 20px;
-    font-size: 18px;
+    font-size: 1.2rem;
     color: var(--primary-color);
 }
 
 input {
-    font-size: 18px;
+    font-size: 1.2rem;
     width: 300px;
     border-radius: 10px;
     padding: 0.2rem;
@@ -89,7 +89,7 @@ input {
 .search-row {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
 }
 
 .search-right {
@@ -99,7 +99,7 @@ input {
 }
 
 .search-right .fa-solid,h3 {
-    font-size: 18px;
+    font-size: 1.2rem;
     color: var(--primary-color);
 }
 
@@ -110,6 +110,11 @@ input {
 .btn-row {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+}
+
+.btn-row-left {
+    display: flex;
     align-items: center;
 }
 
@@ -124,14 +129,66 @@ button {
     cursor: pointer;
     color: var(--secondary-color);
     font-weight: 500;
-    font-size: 18px;
+    font-size: 1.2rem;
+}
+
+button:hover {
+    background-color: #775AA2;
+    transition: ease-in-out 0.2s;
 }
 
 button:last-of-type {
     margin-right: 0;
 }
 
-.content {
-    grid-column: 2 / 6;
+.project {
+    grid-column: 2 / 5;
     grid-row: 2 / 6;
+}
+
+.content-grid {
+    display: grid;
+    gap: 20px;
+    grid-template: 2.2rem 1fr 1fr 1fr / repeat(2, 1fr);
+    height: 100%;
+}
+
+.content-grid h3 {
+    font-size: 1.6rem;
+    grid-column: 1 / 3;
+}
+
+.content-card-element {
+    background-color: var(--secondary-color);
+    border-radius: 20px;
+    border-left: 8px solid var(--action-color);
+
+}
+
+.trending {
+    grid-column: 5 / 6;
+    grid-row: 2 / 6;
+    display: grid;
+    grid-template: 2.2rem 1fr 2.2rem 1fr / 1fr;
+    gap: 20px;
+}
+
+.trending h3 {
+    font-size: 1.6rem;
+}
+
+.trending-element-card {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    border-radius: 20px;
+    background-color: var(--secondary-color);
+}
+
+.announcement-element-card {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    border-radius: 20px;
+    background-color: var(--secondary-color);
 }
